[package]
name = "zikoichi_controller"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe_drive = "0.3.5"
async-std = "1.12.0"
dualshock-driver = {git = "https://github.com/motii8128/dualshock-driver.git"}
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.41"
serialport = "4.2.0"
rust_imu_utils = {git = "https://github.com/motii8128/rust_imu_utils"}

[package.metadata.ros]
safe_drive_version = "0.3.5"